# delightool

./: Dockerfile  README.md
backend/: .env  Cargo.toml  LICENSE  README.md  openapi.yaml  sqlx-data.json
backend/src/: audit.rs  db.rs  error.rs  granular_acls.rs  groups.rs  jobs.rs  main.rs  parser.rs  pipenv.rs  resources.rs  schedule.rs  scripts.rs  static_assets.rs  users.rs  utils.rs  variables.rs  worker.rs  worker_ping.rs
frontend/: README.md
python-client/: README.md  build.sh  install.sh  publish.sh  pyproject.toml  python-gen.yaml
python-client/wmill/: client.py
